fix: update static file paths and enhance data handling for monitoring status in frontend
Co-authored-by: Genie <genie@cosine.sh>

--- a/frontend/threat_hunting.html
+++ b/frontend/threat_hunting.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Threat Hunting Interface - Network Anomaly Detection</title>
-    <link rel="stylesheet" href="static/style.css">
-    <link rel="stylesheet" href="static/threat_hunting.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="threat_hunting.css">
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -235,7 +235,7 @@
     <!-- Notification Container -->
     <div id="notification-container" class="notification-container"></div>
 
-    <script src="static/threat_hunting.js"></script>
+    <script src="threat_hunting.js"></script>
 </body>
 </html>
 
